--- a/BootDash.html
+++ b/BootDash.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="./ReaderStyle.css">
     <link rel="stylesheet" href="./InventoryStyle.css">
     <link rel="stylesheet" href="./HistoryStyle.css">
+    <link rel="stylesheet" href="./dashboardStyle.css">
     <link rel="stylesheet" href="./TransactionBorrowed.css">
     <link rel="stylesheet" href="./TransactionsReturned.css">
     <link rel="stylesheet" href="./TransactionsOverdue.css">
-    <link rel="stylesheet" href="./dashboardStyle.css">
+    <link rel="stylesheet" href="./ReadersInformation.css">
+    
     <title>LiBorrow Dashboard</title>
 </head>
 <body>
@@ -167,7 +169,8 @@ new Chart(pieCtx, {
         responsive: true,
         plugins: {
             legend: {
-                display: false
+                display: true,
+                position: 'bottom'
             }
         }
     }
@@ -224,12 +227,35 @@ new Chart(barCtx, {
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById("body-content").innerHTML = data;
+                    initializeViewMoreButtons();
                     document.title = "Readers List"; // Change the page title
                     document.getElementById("page-title").innerText = "Readers List"; // Change the displayed title
                 })
-                .catch(error => console.error('Error fetching content:', error));
+                .catch(error => handleError('Error fetching ReaderDash:', error));
         });
-    
+
+        // Function to attach listeners to View More buttons
+        function initializeViewMoreButtons() {
+            document.querySelectorAll(".view-more a").forEach(button => {
+                button.addEventListener("click", function(event) {
+                    event.preventDefault();
+                    fetch('./ReadersInformation.html')
+                        .then(response => response.text())
+                        .then(data => {
+                            document.getElementById("body-content").innerHTML = data;
+                            document.title = "Reader' Information"; // Change the page title
+                            document.getElementById("page-title").innerText = "Reader's Information"; // Change the displayed title
+                        })
+                        .catch(error => handleError('Error fetching ReadersInformation:', error));
+                });
+            });
+        }
+
+        // Function to handle errors and display a user-friendly message
+        function handleError(message, error) {
+            console.error(message, error);
+            // You can add code here to display an error message to the user, e.g., using a modal or alert.
+        }
         document.getElementById("button2").addEventListener("click", function(event) {
             event.preventDefault();
             fetch('./InventoryDash.html')
