--- a/ReaderDash.html
+++ b/ReaderDash.html
@@ -1,4 +1,6 @@
-<div class="content-box" id="content2">
+
+<title>Reader's Information</title>
+<div class="content-box" id="readers-info-content">
     <div class="container">
         <!-- Four anchor tags as buttons -->
         <div class="button-group">
@@ -45,46 +47,77 @@
                         <td>1</td>
                         <td>John Doe</td>
                         <td>johndoe@example.com</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-more"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>Jane Smith</td>
                         <td>janesmith@example.com</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-more"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>Robert Brown</td>
                         <td>robertbrown@example.com</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-more"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td>Emily White</td>
                         <td>emilywhite@example.com</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-more"><a href="#">View More</a></td>
                     </tr>
                     <tr>
                         <td>5</td>
                         <td>Michael Green</td>
                         <td>michaelgreen@example.com</td>
-                        <td class="act"><a href="#">View More</a></td>
+                        <td class="act view-more"><a href="#">View More</a></td>
                     </tr>
                 </tbody>
             </table>
             <div class="Reader-pagination">
                 <span><img src="./Images/Expand_left.svg" alt="Previous Icon" width="18" height="18"></span>
                 <a href="#" class="prev">Previous</a>
-                <a href="#" class="page-number active " id="one">1</a>
-                <a href="#" class="page-number " id="num">2</a>
-                <a href="#" class="page-number " id="num">3</a>
-                <a href="#" class="page-number " id="num" >4</a>
-                <a href="#" class="page-number  " id="num">...</a>
-                <a href="#" class="page-number " id="num">50</a>
+                <a href="#" class="page-number active" id="one">1</a>
+                <a href="#" class="page-number" id="num">2</a>
+                <a href="#" class="page-number" id="num">3</a>
+                <a href="#" class="page-number" id="num">4</a>
+                <a href="#" class="page-number" id="num">...</a>
+                <a href="#" class="page-number" id="num">50</a>
                 <a href="#" class="next">Next</a>
                 <span><img src="./Images/Expand_right.svg" alt="Next Icon" width="18" height="18"></span>
             </div>            
         </div>
+        
     </div>
+
+    <div id="fetched-content"></div> <!-- New container for dynamically fetched content -->
+
+    <script>
+    document.querySelectorAll(".view-more a").forEach(button => {
+        button.addEventListener("click", function(event) {
+            event.preventDefault();
+            fetch('./ReadersInformation.html')
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.text();
+                })
+                .then(data => {
+                    document.getElementById("fetched-content").innerHTML = data; // Update the fetched-content div
+                    document.title = "Reader's Information"; // Change the page title
+
+                    // Reinitialize any event listeners after loading the new content
+                    document.querySelectorAll('.view-more-btn').forEach(button => {
+                        button.addEventListener('click', function(event) {
+                            event.preventDefault();
+                            // Logic for view-more inside new content
+                        });
+                    });
+                })
+                .catch(error => console.error('Error fetching content:', error));
+        });
+    });
+    </script>
 </div>
