--- a/TransactionsBorrowed.html
+++ b/TransactionsBorrowed.html
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transactions Section</title>
-    <link rel="stylesheet" href="./TransactionsStyle.css"> <!-- Linking the CSS file here -->
-</head>
-<body>
-
 <div class="content-box" id="content2">
     <div class="container">
         <div class="TranscInput">
@@ -29,8 +19,7 @@
             </button>
         </div>
 
-        <!-- Stacking 5 divs inside the Trbox class -->
-        <div id="td1" class="Brbox">
+        <div id="td1" class="Borrowbox">
             <div class="Borrbox Bglobal">
                 <img src="./Images/FourthWing.png" alt="Book one" id="book1">
                 <div class="book-details">
@@ -41,7 +30,35 @@
                     <p id="Total">Total Borrowed: 50</p>
                 </div>
                 <div class="viewbtn">
-                    <a href=" ">View Borrowers</a>
+                    <a href="javascript:void(0);" class="view-borrowers" onclick="toggleDropdown(event)">View Borrowers</a>
+                    <div class="dropdown-content">
+                        <table>
+                            <tr>
+                                <th>User ID</th>
+                                <th>Name</th>
+                                <th>Due Date</th>
+                                <th>Details</th>
+                            </tr>
+                            <tr>
+                                <td>0001</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0002</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0003</td>
+                                <td>John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
             <div class="Borrbox Bglobal">
@@ -54,7 +71,35 @@
                     <p id="Total">Total Borrowed: 50</p>
                 </div>
                 <div class="viewbtn">
-                    <a href=" ">View Borrowers</a>
+                    <a href="javascript:void(0);" class="view-borrowers" onclick="toggleDropdown(event)">View Borrowers</a>
+                    <div class="dropdown-content">
+                        <table>
+                            <tr>
+                                <th>User ID</th>
+                                <th>Name</th>
+                                <th>Due Date</th>
+                                <th>Details</th>
+                            </tr>
+                            <tr>
+                                <td>0001</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0002</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0003</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
             <div class="Borrbox Bglobal">
@@ -64,10 +109,38 @@
                     <p class="author">Danielle L. Jensen</p>
                 </div>
                 <div class="Borrowed-total">
-                    <p id="Total" >Total Borrowed: 50</p>
+                    <p id="Total">Total Borrowed: 50</p>
                 </div>
                 <div class="viewbtn">
-                    <a href=" ">View Borrowers</a>
+                    <a href="javascript:void(0);" class="view-borrowers" onclick="toggleDropdown(event)">View Borrowers</a>
+                    <div class="dropdown-content ">
+                        <table>
+                            <tr>
+                                <th>User ID</th>
+                                <th>Name</th>
+                                <th>Due Date</th>
+                                <th>Details</th>
+                            </tr>
+                            <tr>
+                                <td>0001</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="45" height="45">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0002</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0003</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
             <div class="Borrbox Bglobal">
@@ -77,20 +150,57 @@
                     <p class="author">Danielle L. Jensen</p>
                 </div>
                 <div class="Borrowed-total">
-                    <p id="Total" >Total Borrowed: 50</p>
+                    <p id="Total">Total Borrowed: 50</p>
                 </div>
                 <div class="viewbtn">
-                    <a href="#">View Borrowers</a>
+                    <a href="javascript:void(0);" class="view-borrowers" onclick="toggleDropdown(event)">View Borrowers</a>
+                    <div class="dropdown-content last-content ">
+                        <table>
+                            <tr>
+                                <th>User ID</th>
+                                <th>Name</th>
+                                <th>Due Date</th>
+                                <th>Details</th>
+                            </tr>
+                            <tr>
+                                <td>0001</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0002</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                            <tr>
+                                <td>0003</td>
+                                <td><img class="Avatar" src="./Images/Avatar.svg" alt="book" width="40" height="40">John Doe</td>
+                                <td>2024-10-10</td>
+                                <td class="act"><a href="#">View More</a></td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
             </div>
-            
         </div>
     </div>
-
     <script>
-        // JavaScript for button functionality can be added here if needed
+        function toggleDropdown(event) {
+            const dropdown = event.target.nextElementSibling; // Get the dropdown next to the clicked link
+            dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block'; // Toggle display
+        }
+
+        // Close the dropdown if clicking outside of it
+        document.addEventListener('click', function(event) {
+            const dropdowns = document.querySelectorAll('.dropdown-content');
+            dropdowns.forEach(dropdown => {
+                const link = dropdown.previousElementSibling; // The corresponding link
+                if (!link.contains(event.target) && !dropdown.contains(event.target)) {
+                    dropdown.style.display = 'none'; // Hide dropdown if clicked outside
+                }
+            });
+        });
     </script>    
 </div>
-
-</body>
-</html>
