--- a/BootDash.html
+++ b/BootDash.html
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="body-content" class="col-10">
+                    <div id="body-content" class="col-10">
                 </div>
             </div>
         </div>
@@ -543,34 +543,30 @@ const myBarChart = new Chart(ctx, {
     });
 }
 function initializeViewMoreListeners() {
-    // Function to handle the fetch request and content loading
     function fetchAndDisplayContent(event) {
-        event.preventDefault(); // Prevent the default link behavior
+        event.preventDefault();
 
-        fetch('./ReadersInformation.html') // Fetch the external HTML file
+        fetch('./ReadersInformation.html')
             .then(response => {
-                if (!response.ok) { // Check for network errors
+                if (!response.ok) {
                     throw new Error('Network response was not ok');
                 }
-                return response.text(); // Convert the response to text
+                return response.text(); 
             })
             .then(data => {
-                // Insert the fetched content into the 'fetched-content' div
                 document.getElementById("body-content").innerHTML = data;
-                document.title = "Reader's Information"; // Update the page title
+                initializeUpdateButton();
+                document.title = "Reader's Information";
 
-                // Reinitialize event listeners for any new elements inside the fetched content
                 document.querySelectorAll('.view-more-btn').forEach(button => {
                     button.addEventListener('click', function(event) {
                         event.preventDefault();
-                        // Logic for view-more inside new content
                     });
                 });
             })
-            .catch(error => console.error('Error fetching content:', error)); // Handle fetch errors
+            .catch(error => console.error('Error fetching content:', error));
     }
 
-    // Add the click event listener to each "View More Info" link
     document.querySelectorAll(".ViewMoreInfo a").forEach(button => {
         button.addEventListener("click", fetchAndDisplayContent);
     });
