--- a/UserNavTemplate.html
+++ b/UserNavTemplate.html
@@ -115,7 +115,7 @@
         //DASHBOARD CONTENT
         document.getElementById("button0").addEventListener("click", function(event) {
             event.preventDefault();
-            fetch('./UserDashboard.html')
+            fetch('./UserDash.html')
                 .then(response => response.text())
                 .then(data => {
                     document.getElementById("body-content").innerHTML = data;
@@ -234,6 +234,22 @@
                 dropdown.style.display = "none";
             }
         });
+
+        function loadUserDashboard() {
+            fetch('./UserDash.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById("body-content").innerHTML = data;
+                    document.title = "Dashboard"; // Change the page title
+                    document.getElementById("page-title").innerText = "Dashboard"; // Change the displayed title
+                    renderCharts();
+                })
+                .catch(error => console.error('Error fetching content:', error));
+        };
+
+        window.onload = function() {
+            loadUserDashboard();  // Automatically load the Dashboard content
+        };
 
         
     </script>
